# dji-drone-person-tracker

./: .gitignore  CMakeLists.txt  README.md  main.py
example/: CMakeLists.txt
example/src/: drone_control.cpp
fix/: CMakeLists.txt  fix_camera.cpp
src/: drone_control.cpp
to_compile/: CMakeLists.txt
